# krewwatch

./: .gitignore  CLAUDE.md  pyproject.toml
src/krewwatch/: __init__.py  sse_watcher.py  watch_client.py
tests/: conftest.py  test_e2e_sse.py  test_eval_browser.py  test_eval_prod_sse.py  test_sse_watcher.py  test_watch_client.py
